--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     ],
     "support": {
         "email": "support@phalcana.com",
-        "issues": "https://github.com/braf/phalcana-project/issues"
+        "issues": "https://github.com/braf/phalcana-project/issues",
+        "docs": "http://phalcana.com/guide"
     },
     "require": {
         "php": ">=5.4.0",
